compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_get_stmt_wrong_type_width.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "var w : real\nvar s : string\nget s : w\n"

---
"w"@(FileId(1), 4..5) [Declared]: ref_mut real
"s"@(FileId(1), 17..18) [Declared]: ref_mut string
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 36..37: mismatched types
| note in file FileId(1) for 36..37: this is of type `real`
| info: `real` is not an integer type
