compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_get_stmt_wrong_value_stream.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type s : int\nvar k : int\nget : s, k\n"

---
"s"@(FileId(1), 5..6) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of int
"k"@(FileId(1), 17..18) [Declared]: int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 31..32: cannot use `s` as an expression
| error in file FileId(1) for 31..32: `s` is a reference to a type, not a variable
| note in file FileId(1) for 5..6: `s` declared here
