compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_if_wrong_value_condition.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type b : boolean\nif b then\nelsif b then\nend if"

---
"b"@(FileId(1), 5..6) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of boolean
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 20..21: cannot use `b` as an expression
| error in file FileId(1) for 20..21: `b` is a reference to a type, not a variable
| note in file FileId(1) for 5..6: `b` declared here
error in file FileId(1) at 33..34: cannot use `b` as an expression
| error in file FileId(1) for 33..34: `b` is a reference to a type, not a variable
| note in file FileId(1) for 5..6: `b` declared here
