compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_import_decl_as_const.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var outer : int\nmodule _\n    import const outer\n    outer := 6\nend _\n"
---
"outer"@(FileId(1), 4..9) [Declared]: int
"_"@(FileId(1), 23..24) [Declared]: <error>
"outer"@(FileId(1), 42..47) [ItemImport(LocalDefId(0))]: int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 58..60: cannot assign into `outer`
| error in file FileId(1) for 52..57: `outer` is not imported as `var`
| note in file FileId(1) for 42..47: `outer` imported from here
