compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_import_decl_const_on_never_applicable.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type ty : int\nmodule _\n    import const ty\n    type tou : ty\nend _\n"
---
"ty"@(FileId(1), 5..7) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of int
"_"@(FileId(1), 21..22) [Declared]: <error>
"ty"@(FileId(1), 40..42) [ItemImport(LocalDefId(0))]: alias[DefId(LibraryId(0), LocalDefId(0))] of int
"tou"@(FileId(1), 52..55) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(3))] of int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 34..39: cannot use `const` here
| error in file FileId(1) for 34..39: `const` can only be applied to variables
| note in file FileId(1) for 5..7: `ty` declared here
